--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,13 @@
         <artifactId>pdfbox</artifactId>
         <version>2.0.19</version>
     </dependency>
+    
+    <dependency>
+        <groupId>net.sourceforge.tess4j</groupId>
+        <artifactId>tess4j</artifactId>
+        <version>4.5.2</version>
+    </dependency>
+    
 </dependencies>
 <build>
     <plugins>
