--- a/pom.xml
+++ b/pom.xml
@@ -33,8 +33,12 @@
         <groupId>com.google.zxing</groupId> 
         <artifactId>javase</artifactId> 
         <version>3.3.0</version> 
-    </dependency> 
-    
+    </dependency>
+    <dependency>
+        <groupId>ClearImage</groupId>
+        <artifactId>ClearImageJNI</artifactId>
+      <version>1.0</version>
+    </dependency>
 </dependencies>
 <build>
     <plugins>
